Revert "fix: disable horizontal scrolling"
This reverts commit b8da0dc41ff95693d733ee1bc1491d60f98ee6db.

--- a/launcher-gui/src/index.css
+++ b/launcher-gui/src/index.css
@@ -117,7 +117,7 @@ All colors MUST be HSL.
   }
 
   body {
-    @apply bg-background text-foreground font-mono overflow-x-hidden;
+    @apply bg-background text-foreground font-mono;
     background-image: var(--gradient-mining);
   }
 
